--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
 
 
 
-
-
-
     table {
-        width:80%;
+        padding: 30px;
+        width:100%;
         border-collapse: collapse;
-        font-weight:700;
+        font-weight:800;
+        font-size: 20px;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
     }
     th, td {
         padding: 8px;
@@ -44,6 +46,12 @@
 
 </head>
 <body>
+
+
+
+
+
+
 
 
 
