--- a/index.html
+++ b/index.html
@@ -13,10 +13,15 @@
         align-items: center;
         align-content: center;
 
-        color:rgba(17,17,17);
-        font-size: 35px;
-        flex-grow: 1;
 
+        color:rgba(17,17,17);
+        font-size: 20px;
+        flex-grow: 10;
+        font-weight: 400;
+
+    }
+    h2{
+        font-size: 30px;
     }
 
 
@@ -48,16 +53,48 @@
 <body>
 
 
+<br>
+<br>
+<h1> 人民的通膨救星-私人智能基金 </h1>
+<br>
+<br>
+<br>
+<p> 在物價飛漲薪水沒漲買房需要不吃不喝至少20年都不一定能買到房,投資理財是能讓口袋的錢變多的方法之一,如果不理財,財就會不理你</p>
+<br>
+<!--<p></p>-->
+<br>
+<br>
+<h2>交易策略</h2>
+<img src="img/webp/webp006.webp"  width="1000" height="400" alt="">
+<p>基於黃金交叉與死亡交叉原理的趨勢追蹤策略<br>主要概念是利用短期移動平均線（如5天、20天）和<br>長期移動平均線（如60天、120天）之間的交叉點來做出買入和賣出的決策。</p>
+<br>
 
+<br>
+<br>
+<table>
+    <tr>
+        <th>交叉條件</th>
+        <th>交易信號</th>
+        <th>策略說明</th>
+    </tr>
+    <tr>
+        <td>當日收盤價超過長期移動平均線（120天）且超過前一天的收盤價1.005倍</td>
+        <td>買入</td>
+        <td>捕捉股價上漲趨勢，並實現利潤。</td>
+    </tr>
+    <tr>
+        <td>當日收盤價跌破長期移動平均線且同時跌破短期移動平均線（5天、20天）</td>
+        <td>賣出</td>
+        <td>捕捉股價下跌趨勢，並實現利潤。</td>
+    </tr>
+</table>
 
-
-
-
-
-
-
-
+<br>
+<br>
 <h2>機器學習模型總覽</h2>
+
+<br>
+<br>
 
 <table>
     <tr>
@@ -97,9 +134,22 @@
     </tr>
 </table>
 
-<h2> 自動化交易機器人 </h2>
-<img src="" height="" width="" alt="">
-<p> </p>
+<br>
+<br>
+<br>
+<br>
+
+<h2> 製作自動化交易機器人 </h2>
+<img src="img/webp/webp001.webp"  width="1000" height="500" alt="">
+<p> 輸入指令全部程式碼由生成式AI ChatGPT產生</p>
+<img src="img/webp/webp002.webp" width="1000" height="500" alt="">
+<p>建置環境在IDE PyCharm 建置執行</p>
+<img src="img/webp/webp003.webp" width="1000" height="500" alt="">
+<img src="img/webp/webp005.webp" width="1000" height="500" alt="">
+<p>安裝程式需要用到的套件相關</p>
+<img src="img/webp/webp004.webp" width="1000" height="500" alt="">
+
+
 
 
 
