--- a/index.html
+++ b/index.html
@@ -224,13 +224,13 @@
 <img src="img/webp/webp007.webp" width="1000" height="500" alt="">
 <p>導入程式碼後<br>
     確認 交易商品,交易區間(起始日到結束日)
-    <br>確認後執行程式碼</p>
+    <br>在執行程式碼</p>
 <img src="img/webp/webp009.webp" width="1000" height="500" alt="">
 <p>執行結果:<br>
 累積收益代表資產增加了多少% <br>數字1代表初始值(原資金) <br>
 上面數字顯示:104.19 代表增加了103.19%的收益
 </p>
-<img src="img/webp/webp008.webp" width="1000" height="500" alt="">
+<img src="img/webp/webp008.webp" width="1000" height="350" alt="">
 <p>導入訓練模型</p>
 <br>
 <br>
