--- a/index.html
+++ b/index.html
@@ -253,33 +253,39 @@
 <br>
 <br>
 <h2>各收益比較</h2>
+
 <table>
     <tr>
         <th>方法</th>
         <th>比特幣BTC-USD</th>
         <th>黃金GOLD</th>
         <th>台積電2330</th>
+        <th>聯發科2454</th>
     </tr>
     <tr>
         <td>移動平均</td>
         <td>104.19%</td>
         <td>1.39%</td>
         <td>1.21%</td>
+        <td>0.96%</td>
     </tr>
     <tr>
         <td>捲積神經網路CNN</td>
         <td>34662326589080%</td>
         <td>367700.44%</td>
         <td>23565.24%</td>
+        <td>590787.97%</td>
     </tr>
     <tr>
         <td>深度神經網路DNN</td>
         <td>3.28%</td>
         <td>1%</td>
         <td>1%</td>
+        <td>1%</td>
     </tr>
     <tr>
         <td>長短期記憶網路LSTM</td>
+        <td>1%</td>
         <td>1%</td>
         <td>1%</td>
         <td>1%</td>
@@ -289,20 +295,25 @@
         <td>3444098470884080345881737370271744%</td>
         <td>96593950224196704%</td>
         <td>94649417192.90%</td>
+        <td>4650218429526605.00%</td>
     </tr>
     <tr>
         <td>遞歸神經網絡RNN</td>
         <td>1.86%</td>
         <td>1.04%</td>
         <td>1.27%</td>
+        <td>1.34%</td>
     </tr>
     <tr>
         <td>支持向量機SVM</td>
         <td>120.8%</td>
         <td>1.39%</td>
         <td>1.21%</td>
+        <td>0.96%</td>
     </tr>
 </table>
+
+
 <br>
 <br>
 <br>
