--- a/index.html
+++ b/index.html
@@ -315,20 +315,30 @@
 <br>
 <br>
 <br>
-<h2>連接線上模擬交易</h2>
+<h2>連接線上自動化模擬交易</h2>
 
 <img src="img/webp/webp011.webp" width="1000" height="450" alt="">
-<img src="img/webp/webp012.webp" width="1000" height="450" alt="">
+<p>選擇任一交易平台</p>
+<img src="img/webp/webp012.webp" width="1000" height="350" alt="">
+<p>複製程式碼到IDE編輯器裡</p>
 <img src="img/webp/webp013.webp" width="1000" height="450" alt="">
+<p>註冊帳號</p>
 <img src="img/webp/webp014.webp" width="1000" height="450" alt="">
-<img src="img/webp/webp015.webp" width="1000" height="450" alt="">
-<img src="img/webp/webp016.webp" width="1000" height="450" alt="">
-<img src="img/webp/webp017.webp" width="1000" height="450" alt="">
+<p>程式碼要求api及api密鑰 以便連接到平台</p>
+<img src="img/webp/webp015.webp" width="1000" height="350" alt="">
+<p>註冊好後 到交易頁面上 注意右手邊並往下尋找API KEYS</p>
+<img src="img/webp/webp016.webp" width="1000" height="350" alt="">
+<p>按下GENERATE NEW KEYS 生產鑰使 就會生產API 及 相對應API密鑰 </p>
+<img src="img/webp/webp017.webp" width="1000" height="350" alt="">
+<p>拿到API 及 API 密鑰 回到IDE編輯器 放到對應欄位 並執行程式碼</p>
 <img src="img/webp/webp018.webp" width="1000" height="450" alt="">
+<p>執行後 程式就會開始自動依相對應的策略進行買賣</p>
 <br>
 <br>
 <br>
 <a href="https://alpaca.markets/" >Alpaca</a>
+<br>
+<br>
 <a href="https://www.toolify.ai/tw/ai-news-tw/%E5%9C%A85%E5%88%86%E9%90%98%E5%85%A7%E5%95%9F%E5%8B%95alpaca%E4%BA%A4%E6%98%93%E6%A9%9F%E5%99%A8%E4%BA%BA-1960931">設定自動化交易機器人</a>
 <br>
 <br>
