--- a/index.html
+++ b/index.html
@@ -315,6 +315,10 @@
 <br>
 <br>
 <br>
+<a href="https://youtu.be/kOmtoRBOFoE">實作影片連結</a>
+<br>
+<br>
+<br>
 <h2>連接線上自動化模擬交易</h2>
 
 <img src="img/webp/webp011.webp" width="1000" height="450" alt="">
@@ -346,12 +350,19 @@
 <br>
 <hr>
 <br>
+<h2>程式原始碼</h2>
+<br>
 <br>
 <a href="https://github.com/alfo0924/pythonProjectMMLTrades">自動化交易機器人 原始碼</a>
 <br>
 <br>
 <br>
-
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
 
 
