--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 <img src="img/webp/webp015.webp" width="1000" height="350" alt="">
 <p>註冊好後 到交易頁面上 注意右手邊並往下尋找API KEYS</p>
 <img src="img/webp/webp016.webp" width="1000" height="350" alt="">
-<p>按下GENERATE NEW KEYS 生產鑰使 就會生產API 及 相對應API密鑰 </p>
+<p>按下GENERATE NEW KEYS 生產鑰匙 就會生產API 及 相對應API密鑰 </p>
 <img src="img/webp/webp017.webp" width="1000" height="350" alt="">
 <p>拿到API 及 API 密鑰 回到IDE編輯器 放到對應欄位 並執行程式碼</p>
 <img src="img/webp/webp018.webp" width="1000" height="450" alt="">
