--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         color:rgba(17,17,17);
         font-size: 20px;
         flex-grow: 10;
-        font-weight: 400;
+        font-weight: 500;
         list-style-type: none;
         text-decoration: none;
 
@@ -27,6 +27,7 @@
         font-size: 60px;
         color: rgba(248, 248, 248, 0.89);
         text-shadow: 5px 3px 5px rgb(16, 16, 16);
+        transition: 0.3s;
 
     }
     h2{
@@ -36,9 +37,11 @@
         font-size: 35px;
         font-weight: 800;
         text-shadow: 5px 3px 5px rgb(148, 7, 7);
+        transition: 0.3s;
     }
     p:hover{
-        font-weight: 600;
+        font-weight: 700;
+        transition: 0.3s;
     }
     a{
         list-style-type: none;
@@ -53,6 +56,7 @@
         border: solid 5px red ;
         font-weight: 700;
         color: rgb(17, 17, 17);
+        transition: 0.3s;
 
     }
 
@@ -80,6 +84,7 @@
 
         border: solid 5px rgb(243, 2, 2);
         font-weight: 700;
+        transition: 0.2s;
 
     }
 
@@ -103,11 +108,33 @@
 <br>
 <br>
 <h2>交易策略</h2>
+<br>
+<br>
+<p>本交易機器人 交易策略 分為3種 :<br>
+    移動平均,格蘭碧8大法則 和 無任何交易策略 (機器人ai自主學習)
+<br>
+<br>
+    其中這三種交易策略裡面還有細分交易週期 分為: 日內波與波段
+</p>
+<br>
+
+<h2>移動平均</h2>
 <img src="img/webp/webp006.webp"  width="1000" height="400" alt="">
-<p>基於黃金交叉與死亡交叉和日內波趨勢追蹤策略<br>主要概念是利用短期移動平均線（如5天、20天）和<br>長期移動平均線（如60天、120天）之間的交叉點來做出買入和賣出的決策</p>
+<p>基於黃金交叉與死亡交叉和日內波趨勢追蹤策略<br>主要概念是利用<br>短期移動平均線（如5天、20天）<br>和長期移動平均線（如60天、120天）之間的交叉點做買入,賣出的決策
+<br>
+其中交易週期分為 日內波移動平均 與 波段移動平均策略
+<br>
+    日內波移動平均採用 一天內多次交易<br>
+    波段移動平均採用 一周一次交易
+
+</p>
 <br>
 <br>
-<a href="https://www.wealth.com.tw/articles/76909f5c-4b1a-44d0-9a44-0e5921dea31b" >日內波</a>
+<a href="https://www.wealth.com.tw/articles/76909f5c-4b1a-44d0-9a44-0e5921dea31b" >甚麼是日內波 ? </a>
+<br>
+<br>
+<a href="https://www.rayskyinvest.com/39893/what-is-swing-trading">甚麼是波段 ? </a>
+<br>
 <br>
 <br>
 <table>
@@ -127,7 +154,19 @@
         <td>捕捉股價下跌趨勢，並實現利潤。</td>
     </tr>
 </table>
-
+<br>
+<br>
+<br>
+<h2>葛蘭碧8大法則</h2>
+<img src="img/webp/webp019.webp" width="1000" height="500" alt="" >
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <br>
 <br>
 <h2>機器學習模型總覽</h2>
