--- a/index.html
+++ b/index.html
@@ -118,14 +118,15 @@
 </p>
 <br>
 
-<h2>移動平均</h2>
+<h2>交易策略1 :<br>
+    移動平均法</h2>
 <img src="img/webp/webp006.webp"  width="1000" height="400" alt="">
 <p>基於黃金交叉與死亡交叉和日內波趨勢追蹤策略<br>主要概念是利用<br>短期移動平均線（如5天、20天）<br>和長期移動平均線（如60天、120天）之間的交叉點做買入,賣出的決策
 <br>
-其中交易週期分為 日內波移動平均 與 波段移動平均策略
+其中交易週期分為 短週期交易 與 長週期交易
 <br>
-    日內波移動平均採用 一天內多次交易<br>
-    波段移動平均採用 一周一次交易
+    短週期交易採用 日內波套用移動平均法的策略 在一天內多次交易<br>
+    長週期交易採用 波段交易套用移動平均法 並於每周做一次交易
 
 </p>
 <br>
