--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
 
 
     table {
+        margin: auto;
+        /*set the table to center/middle*/
         padding: 30px;
         /*width:100%;*/
         /*border-collapse: collapse;*/
@@ -121,22 +123,17 @@
 <h2>交易策略1 :<br>
     移動平均法</h2>
 <img src="img/webp/webp006.webp"  width="1000" height="400" alt="">
-<p>基於黃金交叉與死亡交叉和日內波趨勢追蹤策略<br>主要概念是利用<br>短期移動平均線（如5天、20天）<br>和長期移動平均線（如60天、120天）之間的交叉點做買入,賣出的決策
+<p>基於黃金交叉與死亡交叉和日內波趨勢追蹤策略<br>主要概念是利用<br>短期移動平均線（如5天、20天）和<br>長期移動平均線（如60天、120天）之間的交叉點做買入,賣出的決策
+<br>
 <br>
 其中交易週期分為 短週期交易 與 長週期交易
+<br>
 <br>
     短週期交易採用 日內波套用移動平均法的策略 在一天內多次交易<br>
     長週期交易採用 波段交易套用移動平均法 並於每周做一次交易
 
 </p>
-<br>
-<br>
-<a href="https://www.wealth.com.tw/articles/76909f5c-4b1a-44d0-9a44-0e5921dea31b" >甚麼是日內波 ? </a>
-<br>
-<br>
-<a href="https://www.rayskyinvest.com/39893/what-is-swing-trading">甚麼是波段 ? </a>
-<br>
-<br>
+
 <br>
 <table>
     <tr>
@@ -158,12 +155,98 @@
 <br>
 <br>
 <br>
-<h2>葛蘭碧8大法則</h2>
+<a href="https://www.wealth.com.tw/articles/76909f5c-4b1a-44d0-9a44-0e5921dea31b" >甚麼是日內波 ? </a>
+<br>
+<br>
+<a href="https://www.rayskyinvest.com/39893/what-is-swing-trading">甚麼是波段 ? </a>
+<br>
+<br>
+<br>
+<br>
+<h2>交易策略2 : <br> 葛蘭碧8大法則</h2>
 <img src="img/webp/webp019.webp" width="1000" height="500" alt="" >
 <br>
 <br>
 <br>
+<p>
+基於200均線作為參考
 <br>
+<br>
+金融交易策略分為買進和賣出訊號
+<br>
+<br>
+買進包括突破、假跌破、支撐和抄底
+<br>
+賣出則有跌破、假突破、反壓和反轉
+<br>
+<br>
+重要限制包括上升均線不放空、下降均線不作多
+<br>
+並識別移動平均線的支撐、壓力及趨勢線功能
+<br>
+<br>
+其中交易週期分為 短週期交易 與 長週期交易
+<br>
+<br>
+<br>
+短週期交易採用 日內波套用移動平均法的策略 在一天內多次交易
+<br>
+長週期交易採用 波段交易套用移動平均法 並於每周做一次交易
+<br>
+</p>
+<br>
+<br>
+<br>
+
+
+<h2>買進訊號</h2>
+<table>
+    <tr>
+        <th>訊號</th>
+        <th>條件</th>
+    </tr>
+    <tr>
+        <td>突破</td>
+        <td>移動平均線從下降趨勢逐漸轉為水平盤整或上升，且股價從移動平均線下方突破移動平均線</td>
+    </tr>
+    <tr>
+        <td>假跌破</td>
+        <td>股價往下跌破移動平均線，但隨即又回到移動平均線之上，且移動平均線仍上升</td>
+    </tr>
+    <tr>
+        <td>支撐</td>
+        <td>股價走在移動平均線之上，雖然修正下跌但未跌破移動平均線便再度反彈</td>
+    </tr>
+    <tr>
+        <td>抄底</td>
+        <td>股價急跌，不僅跌破移動平均線，甚至偏離移動平均線下方，但開始反彈趨向移動平均線</td>
+    </tr>
+</table>
+
+<h2>賣出訊號</h2>
+<table>
+    <tr>
+        <th>訊號</th>
+        <th>條件</th>
+    </tr>
+    <tr>
+        <td>跌破</td>
+        <td>移動平均線從上升趨勢轉變成水平線或下跌，且股價從移動平均線上方跌破移動平均線</td>
+    </tr>
+    <tr>
+        <td>假突破</td>
+        <td>股價反彈突破移動平均線後，卻隨即下跌跌破移動平均線，且移動平均線仍呈現下降趨勢</td>
+    </tr>
+    <tr>
+        <td>反壓</td>
+        <td>股價持續走在移動平均線之下，即使反彈也無法突破移動平均線</td>
+    </tr>
+    <tr>
+        <td>反轉</td>
+        <td>股價急漲後回落，趨近移動平均線，且遠離移動平均線上方</td>
+    </tr>
+</table>
+
 <br>
 <br>
 <br>
