--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <!--<p></p>-->
 <br>
 <br>
-<h2>交易策略</h2>
+<h2>交易策略簡介</h2>
 <br>
 <br>
 <p>本交易機器人 交易策略 分為3種 :<br>
@@ -163,7 +163,8 @@
 <br>
 <br>
 <br>
-<h2>交易策略2 : <br> 葛蘭碧8大法則</h2>
+<h2>交易策略2 :
+<br> 葛蘭碧8大法則</h2>
 <img src="img/webp/webp019.webp" width="1000" height="500" alt="" >
 <br>
 <br>
@@ -250,10 +251,37 @@
 <br>
 <br>
 <br>
+<h2>交易策略3 :<br>
+無任何交易策略 </h2>
+<br>
+<br>
+<img src="img/webp/webp020.webp" width="1000" height="500" alt="" >
+<br>
+<br>
+<p>
+基於無任何交易策略,並移除任何交易指標 並讓 訓練模型
+<br>
+從歷史數據價錢起伏中
+<br>從中學習如何交易並以提升交易績效
+<br>
+交易週期 分為
+<br>
+<br>
+短週期交易 和  長週期交易
+<br>
+<br>
+短週期交易採用 無任何指標 交易策略 或 交易法則 並 結合ai 訓練模型 在一天內進行多次交易
+<br>
+<br>
+長週期交易採用 無任何指標或 交易策略 交易法則  並 結合ai 訓練模型 在每一週做1次交易
+
+</p>
 <br>
 <br>
 <br>
-<h2>機器學習模型總覽</h2>
+<br>
+<br>
+<h2>機器學習/訓練模型 總覽</h2>
 
 <br>
 <br>
