--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 短週期交易採用 無任何指標 交易策略 或 交易法則 並 結合ai 訓練模型 在一天內進行多次交易
 <br>
 <br>
-長週期交易採用 無任何指標或 交易策略 交易法則  並 結合ai 訓練模型 在每一週做1次交易
+長週期交易採用 無任何指標或 交易策略 交易法則  結合ai 訓練模型 並在每一週只做1次交易
 
 </p>
 <br>
