--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
         background-color: #f2f2f2;
     }
     table :hover{
-
-        border: solid 5px rgb(243, 2, 2);
+        background: rgba(225, 225, 225, 0.57);
+        border: solid 2px rgb(243, 2, 2);
         font-weight: 700;
-        transition: 0.2s;
+        transition: 0.3s;
 
     }
 
@@ -112,18 +112,37 @@
 <h2>交易策略簡介</h2>
 <br>
 <br>
-<p>本交易機器人 交易策略 分為3種 :<br>
+<p>本交易機器人 交易策略 分為3種 :
+<br>
+    <br>
     移動平均,格蘭碧8大法則 和 無任何交易策略 (機器人ai自主學習)
 <br>
 <br>
-    其中這三種交易策略裡面還有細分交易週期 分為: 日內波與波段
+    其中這三種交易策略裡面還有細分交易週期
+<br>
+<br>
+    分為: 日內波與波段
 </p>
 <br>
 
 <h2>交易策略1 :<br>
     移動平均法</h2>
 <img src="img/webp/webp006.webp"  width="1000" height="400" alt="">
-<p>基於黃金交叉與死亡交叉和日內波趨勢追蹤策略<br>主要概念是利用<br>短期移動平均線（如5天、20天）和<br>長期移動平均線（如60天、120天）之間的交叉點做買入,賣出的決策
+<p>基於<br><br>黃金交叉與死亡交叉
+    <br>
+    <br>和
+    <br>
+    <br>
+    日內波/波段 趨勢追蹤策略
+    <br>
+    <br>
+    主要概念是利用
+    <br>
+    <br>
+    短期移動平均線（如5天、20天）和
+    <br>
+    <br>
+    長期移動平均線（如60天、120天）之間的交叉點做買入,賣出的決策
 <br>
 <br>
 其中交易週期分為 短週期交易 與 長週期交易
@@ -295,7 +314,7 @@
     <tr>
         <td>支持向量機（SVM）</td>
         <td>支持向量機 (SVM) 是一種監督式學習模型，可以用於分類和回歸任務。</td>
-        <td>預測日內波的方向或幅度。</td>
+        <td>預測日內波/波段的方向或幅度。</td>
     </tr>
     <tr>
         <td>隨機森林（Random Forest）</td>
@@ -305,12 +324,12 @@
     <tr>
         <td>深度神經網絡（DNN）</td>
         <td>深度神經網絡（DNN）是一種深度學習模型，具有很強的擬合能力和對於非線性關係的表徵能力。</td>
-        <td>捕捉日內波的複雜模式。</td>
+        <td>捕捉日內波/波段的複雜模式。</td>
     </tr>
     <tr>
         <td>長短期記憶網絡（LSTM）</td>
         <td>長短期記憶網絡（LSTM) 是一種循環神經網絡的變體，特別適合處理時間序列數據。</td>
-        <td>如果日內波具有時間相依性，LSTM 可能是一個很好的選擇。</td>
+        <td>如果日內波/波段具有時間相依性，LSTM 可能是一個很好的選擇。</td>
     </tr>
     <tr>
         <td>卷積神經網絡（CNN）</td>
@@ -405,64 +424,280 @@
 <br>
 <h2>各收益比較</h2>
 
+
+
+
+
+<h2>交易策略收益績效</h2>
+
 <table>
     <tr>
-        <th>方法</th>
-        <th>比特幣BTC-USD</th>
-        <th>黃金GOLD</th>
-        <th>台積電2330</th>
-        <th>聯發科2454</th>
+        <th>策略</th>
+        <th>商品</th>
+        <th>移動平均線 交易</th>
+        <th>CNN + 移動平均線</th>
+        <th>DNN + 移動平均線</th>
+        <th>LSTM + 移動平均線</th>
+        <th>RF + 移動平均線</th>
+        <th>RNN + 移動平均線</th>
+        <th>SVM + 移動平均線</th>
     </tr>
     <tr>
-        <td>移動平均</td>
-        <td>104.19%</td>
-        <td>1.39%</td>
-        <td>1.21%</td>
-        <td>0.96%</td>
+        <td rowspan="4">ma 01 - 策略移動平均法 (日內波)</td>
+        <td>比特幣</td>
+        <td>110.84 %</td>
+        <td>40126310277474.74 %</td>
+        <td>2.67 %</td>
+        <td>1.0 %</td>
+        <td>4577142368825796781240629868888064.00 %</td>
+        <td>1.94 %</td>
+        <td>217.07 %</td>
     </tr>
     <tr>
-        <td>捲積神經網路CNN</td>
-        <td>34662326589080%</td>
-        <td>367700.44%</td>
-        <td>23565.24%</td>
-        <td>590787.97%</td>
+        <td>黃金</td>
+        <td>1.21 %</td>
+        <td>462460.05 %</td>
+        <td>1.0 %</td>
+        <td>1.0 %</td>
+        <td>136911308667370176.00 %</td>
+        <td>1.08 %</td>
+        <td>8.53 %</td>
     </tr>
     <tr>
-        <td>深度神經網路DNN</td>
-        <td>3.28%</td>
-        <td>1%</td>
-        <td>1%</td>
-        <td>1%</td>
+        <td>聯發科</td>
+        <td>1.04 %</td>
+        <td>760738.97 %</td>
+        <td>1.0 %</td>
+        <td>1.0 %</td>
+        <td>6847037172784135.00 %</td>
+        <td>1.48 %</td>
+        <td>1.0 %</td>
     </tr>
     <tr>
-        <td>長短期記憶網路LSTM</td>
-        <td>1%</td>
-        <td>1%</td>
-        <td>1%</td>
-        <td>1%</td>
+        <td>台積電</td>
+        <td>1.31 %</td>
+        <td>28836.51 %</td>
+        <td>1.0 %</td>
+        <td>1.0 %</td>
+        <td>124888609179.68 %</td>
+        <td>1.40 %</td>
+        <td>2.88 %</td>
     </tr>
     <tr>
-        <td>隨機森林RF</td>
-        <td>3444098470884080345881737370271744%</td>
-        <td>96593950224196704%</td>
-        <td>94649417192.90%</td>
-        <td>4650218429526605.00%</td>
+        <td rowspan="4">ma 012 - 策略移動平均法 (波段)</td>
+        <td>比特幣</td>
+        <td>4.17 %</td>
+        <td>1790775665.95 %</td>
+        <td>2.64 %</td>
+        <td>1.0 %</td>
+        <td>68135184439713.12 %</td>
+        <td>2.01 %</td>
+        <td>621086429.60 %</td>
     </tr>
     <tr>
-        <td>遞歸神經網絡RNN</td>
-        <td>1.86%</td>
-        <td>1.04%</td>
-        <td>1.27%</td>
-        <td>1.34%</td>
+        <td>黃金</td>
+        <td>1.0 %</td>
+        <td>27729.18 %</td>
+        <td>1.05 %</td>
+        <td>1.0 %</td>
+        <td>92208956.19 %</td>
+        <td>1.04 %</td>
+        <td>0.12 %</td>
     </tr>
     <tr>
-        <td>支持向量機SVM</td>
-        <td>120.8%</td>
-        <td>1.39%</td>
-        <td>1.21%</td>
-        <td>0.96%</td>
+        <td>聯發科</td>
+        <td>1.0 %</td>
+        <td>12857.27 %</td>
+        <td>1.0 %</td>
+        <td>1.0 %</td>
+        <td>20482415.56 %</td>
+        <td>1.61 %</td>
+        <td>510.82 %</td>
+    </tr>
+    <tr>
+        <td>台積電</td>
+        <td>1.0 %</td>
+        <td>1054.54 %</td>
+        <td>1.86 %</td>
+        <td>1.0 %</td>
+        <td>109361.95 %</td>
+        <td>1.51 %</td>
+        <td>100.71 %</td>
+    </tr>
+    <tr>
+        <td rowspan="4">gma 02 - 葛蘭碧8大法則 (日內波)</td>
+        <td>比特幣</td>
+        <td>100.28 %</td>
+        <td>10815.66 %</td>
+        <td>2.68 %</td>
+        <td>1.0 %</td>
+        <td>1510409750252233740299545459294208.00 %</td>
+        <td>1.82 %</td>
+        <td>126.5 %</td>
+    </tr>
+    <tr>
+        <td>黃金</td>
+        <td>0.84 %</td>
+        <td>79.19 %</td>
+        <td>1.0 %</td>
+        <td>1.0 %</td>
+        <td>11146854422637048.00 %</td>
+        <td>1.11 %</td>
+        <td>0.45 %</td>
+    </tr>
+    <tr>
+        <td>聯發科</td>
+        <td>5.22 %</td>
+        <td>30.37 %</td>
+        <td>1.0 %</td>
+        <td>1.0 %</td>
+        <td>1123565053418907.50 %</td>
+        <td>1.59 %</td>
+        <td>4.13 %</td>
+    </tr>
+    <tr>
+        <td>台積電</td>
+        <td>5.13 %</td>
+        <td>29.87 %</td>
+        <td>1.0 %</td>
+        <td>1.0 %</td>
+        <td>39513115992.20 %</td>
+        <td>1.47 %</td>
+        <td>2.96 %</td>
+    </tr>
+    <tr>
+        <td rowspan="4">gma 022 - 葛蘭碧8大法則 (波段)</td>
+        <td>比特幣</td>
+        <td>3.14 %</td>
+        <td>1.64 %</td>
+        <td>2.64 %</td>
+        <td>1.0 %</td>
+        <td>39231531667694.25 %</td>
+        <td>5.08 %</td>
+        <td>22865361.69 %</td>
+    </tr>
+    <tr>
+        <td>黃金</td>
+        <td>1.0 %</td>
+        <td>0.93 %</td>
+        <td>1.05 %</td>
+        <td>1.0 %</td>
+        <td>34279149.65 %</td>
+        <td>2.27 %</td>
+        <td>0.0 %</td>
+    </tr>
+    <tr>
+        <td>聯發科</td>
+        <td>1.0 %</td>
+        <td>0.90 %</td>
+        <td>1.0 %</td>
+        <td>1.0 %</td>
+        <td>7562730.93 %</td>
+        <td>2.69 %</td>
+        <td>95.58 %</td>
+    </tr>
+    <tr>
+        <td>台積電</td>
+        <td>1.0 %</td>
+        <td>0.96 %</td>
+        <td>1.86 %</td>
+        <td>1.0 %</td>
+        <td>70477.70 %</td>
+        <td>3.04 %</td>
+        <td>10356.76 %</td>
+    </tr>
+    <tr>
+        <td rowspan="4">nma 03 - 無任何交易策略 (日內波)</td>
+        <td>比特幣</td>
+        <td>null %</td>
+        <td>1.83 %</td>
+        <td>2.23 %</td>
+        <td>2.37 %</td>
+        <td>68318029697406918358896476160.00 %</td>
+        <td>1.78 %</td>
+        <td>2.73 %</td>
+    </tr>
+    <tr>
+        <td>黃金</td>
+        <td>null %</td>
+        <td>1.08 %</td>
+        <td>1.39 %</td>
+        <td>0.95 %</td>
+        <td>273322957185962.31 %</td>
+        <td>1.07 %</td>
+        <td>1.57 %</td>
+    </tr>
+    <tr>
+        <td>聯發科</td>
+        <td>null %</td>
+        <td>0.77 %</td>
+        <td>2.34 %</td>
+        <td>1.0 %</td>
+        <td>5104306725747.11 %</td>
+        <td>1.43 %</td>
+        <td>0.39 %</td>
+    </tr>
+    <tr>
+        <td>台積電</td>
+        <td>null %</td>
+        <td>1.21 %</td>
+        <td>0.97 %</td>
+        <td>1.0 %</td>
+        <td>407544271.61 %</td>
+        <td>1.27 %</td>
+        <td>0.45 %</td>
+    </tr>
+    <tr>
+        <td rowspan="4">nma 032 - 無任何交易策略 (波段)</td>
+        <td>比特幣</td>
+        <td>null %</td>
+        <td>1.78 %</td>
+        <td>0.87 %</td>
+        <td>0.98 %</td>
+        <td>52.37 %</td>
+        <td>1.00 %</td>
+        <td>0.70 %</td>
+    </tr>
+    <tr>
+        <td>黃金</td>
+        <td>null %</td>
+        <td>0.92 %</td>
+        <td>0.97 %</td>
+        <td>0.94 %</td>
+        <td>15.02 %</td>
+        <td>1.00 %</td>
+        <td>0.64 %</td>
+    </tr>
+    <tr>
+        <td>聯發科</td>
+        <td>null %</td>
+        <td>0.98 %</td>
+        <td>0.99 %</td>
+        <td>1.00 %</td>
+        <td>7.35 %</td>
+        <td>1.00 %</td>
+        <td>1.00 %</td>
+    </tr>
+    <tr>
+        <td>台積電</td>
+        <td>null %</td>
+        <td>1.05 %</td>
+        <td>1.00 %</td>
+        <td>1.00 %</td>
+        <td>4.79 %</td>
+        <td>1.00 %</td>
+        <td>1.00 %</td>
     </tr>
 </table>
+
+
+
+
+
+<br>
+<br>
+<br>
+<br>
 <br>
 <br>
 <br>
