--- a/index.html
+++ b/index.html
@@ -83,13 +83,17 @@
         background-color: #f2f2f2;
     }
     table :hover{
-        background: rgba(225, 225, 225, 0.57);
+        background: rgba(152, 150, 150, 0.41);
         border: solid 2px rgb(243, 2, 2);
         font-weight: 700;
-        transition: 0.3s;
+
+        transition: background-color 0.6s ease-in-out ;
+    }
+    table th,td:hover
+    {
+        transition: 0.2s ;
 
     }
-
 
 
     </style>
