--- a/index.html
+++ b/index.html
@@ -112,15 +112,98 @@
 <br>
 <br>
 <br>
-<p> 在物價飛漲薪水沒漲買房需要不吃不喝至少20年都不一定能買到房,投資理財是能讓口袋的錢變多的方法之一,如果不理財,財就會不理你</p>
+<h2>自動化交易機器人</h2>
 <br>
-<!--<p></p>-->
+<br>
+<p>
+在物價飛漲薪水沒漲買房需要不吃不喝至少20年都不一定能買到房
+<br>
+<br>
+投資理財是能讓口袋的錢變多的方法之一
+<br>
+<br>
+在忙碌社會裡每天除了上班
+<br>
+<br>
+下班多少會有其他瑣碎事情要忙
+<br>
+<br>
+忙完剩下的時間 所剩無幾
+<br>
+<br>
+晚上很少有多餘心思在去操盤賺外快
+<br>
+<br>
+更不可能在上班時間 躲在廁所偷偷操盤做交易
+<br>
+<br>
+更不可能 盯盤盯到結束
+<br>
+<br>
+這麼耗費心思的外快活
+<br>
+<br>
+大家也是為了生活而拼命爭取
+<br>
+<br>
+如果人人有個自動化交易機器人
+<br>
+<br>
+也許大家生活可以很美好
+<br>
+<br>
+也許就不會有人會在路上搶劫
+<br>
+<br>
+也許就不會有那麼多人餓肚子 有一餐沒一餐的生活
+<br>
+<br>
+也許養老也不會愁吃穿
+<br>
+<br>
+如果不理財 財就會不理你
+<br>
+
+
+</p>
+<br>
+<br>
+
+<br>
+<br>
+<h2>流程簡介</h2>
+<img src="img/webp/webp021.webp" width="1000" height="550" alt="">
+<p>所有程式碼由生成式ai產出
+<br>
+<br>
+結合訓練模型 與 金融交易操盤策略
+<br>
+<br>
+產出程式碼
+<br>
+<br>
+在把程式碼放入整合開發環境裡建構環境後再執行
+<br>
+<br>
+執行後可以顯示操盤累積收益
+<br>
+<br>
+除此之外可以連網到交易所
+<br>
+<br>
+讓自動交易機器人進行交易
+
+
+
+</p>
+<br>
+<br>
 <br>
 <br>
 <h2>交易策略簡介</h2>
 <br>
 <br>
-<p>本交易機器人 交易策略 分為3種 :
+<p>交易機器人 交易策略 分為3種 :
 <br>
     <br>
     移動平均,格蘭碧8大法則 和 無任何交易策略 (機器人ai自主學習)
