--- a/index.html
+++ b/index.html
@@ -357,7 +357,12 @@
         <td>股價急漲後回落，趨近移動平均線，且遠離移動平均線上方</td>
     </tr>
 </table>
-
+<br>
+<br>
+<br>
+<br>
+<a href="https://www.oanda.com/bvi-ft/lab-education/technical_analysis/moving_average-granvilles_law/"> 甚麼是葛蘭碧八大法則?</a>
+<br>
 <br>
 <br>
 <br>
