--- a/index.html
+++ b/index.html
@@ -830,7 +830,7 @@
 <a href="https://alpaca.markets/" >Alpaca</a>
 <br>
 <br>
-<a href="https://www.toolify.ai/tw/ai-news-tw/%E5%9C%A85%E5%88%86%E9%90%98%E5%85%A7%E5%95%9F%E5%8B%95alpaca%E4%BA%A4%E6%98%93%E6%A9%9F%E5%99%A8%E4%BA%BA-1960931">設定自動化交易機器人</a>
+<a href="https://www.toolify.ai/tw/ai-news-tw/%E5%9C%A85%E5%88%86%E9%90%98%E5%85%A7%E5%95%9F%E5%8B%95alpaca%E4%BA%A4%E6%98%93%E6%A9%9F%E5%99%A8%E4%BA%BA-1960931">如何設定自動化交易機器人</a>
 <br>
 <br>
 <a href="https://youtu.be/kOmtoRBOFoE">實作影片連結</a>
