--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         font-weight: 500;
         list-style-type: none;
         text-decoration: none;
+        padding: 50px;
 
 
     }
@@ -91,11 +92,26 @@
         transition: background-color 0.8s ease-in-out ;
         flex-grow: 5;
     }
-    table th,td:hover
+    th,td:hover
     {
         background-color: rgba(255, 255, 255, 0.58);
-        transition: 0.8s ease-in-out ;
+        transition: 0.3s ease-in-out ;
         border-radius: 2%;
+
+    }
+    .redLable:hover
+    {
+        border: rgb(250, 0, 0);
+        background-color:rgba(250,0,0);
+        color:azure;
+        padding: 20px;
+        font-weight: 800;
+        /*font-size: 25px;*/
+        transition: 0.4s ease-in-out ;
+        text-align: center;
+        justify-content: center;
+        align-content: center;
+        margin: 10px;
 
     }
 
@@ -111,6 +127,18 @@
 <h1> 人民的通膨救星-私人智能基金 </h1>
 <br>
 <br>
+<div class="redLable" >
+<p>
+報名編號 ： GAI1-56240332
+<br>
+<br>
+團隊名稱 : Alfredojayjaylin
+<br>
+<br>
+參賽成員:林俊傑
+
+</p>
+</div>
 <br>
 <h2>自動化交易機器人</h2>
 <br>
@@ -203,10 +231,17 @@
 <h2>交易策略簡介</h2>
 <br>
 <br>
-<p>交易機器人 交易策略 分為3種 :
+<img src="img/webp/webp022.webp" width="1000" height="500" alt="">
 <br>
-    <br>
-    移動平均,格蘭碧8大法則 和 無任何交易策略 (機器人ai自主學習)
+<br>
+<p>
+交易機器人的交易策略
+<br>
+<br>
+主要分為3種 :
+<br>
+<br>
+移動平均法,格蘭碧8大法則 和 無任何交易策略 (機器人ai自主學習)
 <br>
 <br>
     其中這三種交易策略裡面還有細分交易週期
